# utiltiy-consumption-tracker

./: .gitignore  README.md  auth.py  database.py  main.py  metrics.py  pyproject.toml  styles.py  ui_dashboard.py  ui_devices.py  ui_log_consumption.py  ui_manage_history.py  ui_profile.py  utility_consumption_log.csv  utility_rates.csv
dashboard/: calculations.py  cross_utility.py  history_timeline.py  metrics_cards.py  smart_devices.py
ui/: ui_dashboard.py  ui_devices.py  ui_log_consumption.py  ui_manage_history.py  ui_profile.py  ui_profile_devices.py
utils/: auth.py  database.py  i18n.py  metrics.py
